// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a game card in dark mode 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a hovered game card in dark mode 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Data Processing filters out games with zero playtime 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Data Processing renders correctly with sample data 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Edge Cases handles single game scenario 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          757.4h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          757.4h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Empty States renders empty state when games is null 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-16q7rgc"
    >
      <p
        class="css-13s56l1"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Empty States renders empty state when games is undefined 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-16q7rgc"
    >
      <p
        class="css-13s56l1"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Empty States renders empty state when no games provided 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-16q7rgc"
    >
      <p
        class="css-13s56l1"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a game card in light mode 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a hovered game card in light mode 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Loading State renders loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-nyc2gr"
    >
      <div
        class="css-17cb55"
      />
      <p
        class="css-gej412"
      >
        Loading Gaming Library...
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Theme Integration adapts to dark mode styling 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Theme Integration renders correctly in light mode 1`] = `
<DocumentFragment>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Cities: Skylines header"
            class="css-17nz09e"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1i7ls3l"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-17nz09e"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1i7ls3l"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-17nz09e"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-17mv9gi"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-1i7ls3l"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-rcbrnq"
    >
      <div
        class="css-aq86v7"
      >
        Total Hours: 
        <span
          class="css-1eduwqk"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-aq86v7"
      >
        Average: 
        <span
          class="css-1eduwqk"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
